--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
-# Prerequisites
-*.d
-
 # Compiled Object files
-*.slo
-*.lo
 *.o
 *.obj
+*.ko
 
 # Precompiled Headers
 *.gch
 *.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
 
 # Compiled Dynamic libraries
 *.so
@@ -37,5 +27,96 @@
 *.out
 *.app
 
-# debug information files
-*.dwo
+# Build directories
+build/
+bin/
+Bin/
+x64/
+x86/
+Debug/
+Release/
+Release_x64/
+Debug_x64/
+
+# Visual Studio files
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.sln
+*.suo
+*.sdf
+ipch/
+*.aps
+*.ncb
+*.opensdf
+*.sln.docstates
+
+# Code::Blocks files
+*.cbp
+*.depend
+*.layout
+
+# CMake files
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+*.cmake
+
+# Qt Creator files
+*.pro.user
+*.autosave
+
+# VS Code files
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# MacOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+*~
+*.swp
+*.swo
+
+# Logs
+*.log
+logs/
+
+# Documentation
+doc/
+docs/
+
+# Backup files
+*.backup
+*.bak
+
+# IDE files
+.idea/
+*.iwr
+
+# Package files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
